<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.coinslist.CoinsListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            style="@style/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/coins_list_title" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_13"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_usd"
                style="@style/currency_chip_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                app:chipMinTouchTargetSize="0dp"
                app:textEndPadding="@dimen/space_20"
                app:textStartPadding="@dimen/space_20" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_eur"
                style="@style/currency_chip_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur"
                app:chipMinTouchTargetSize="0dp"
                app:textEndPadding="@dimen/space_20"
                app:textStartPadding="@dimen/space_20" />

        </com.google.android.material.chip.ChipGroup>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coins_list_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        tools:listitem="@layout/view_holder_coin" />

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_coin" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/error_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_13"
            android:text="@string/error" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/error_btn"
            style="@style/error_btn"
            android:layout_width="@dimen/space_175"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:backgroundTint="@color/orange_peel"
            android:text="@string/error_try_again" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange_peel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>